@@ -2,6 +2,8 @@ Revision history for perl module constant::Atom
 
 0.10 2014-08-23
     - constant/Atom.pm also had a hardcoded $VERSION. Doh.
+    - Added tests for some failure cases, as the result of
+      looking at the results from Devel::Cover
 
 0.09 2014-08-19
     - Forgot to remove $VERSION from constant::Atom::Strict when switching
